--- a/src/scss/components/_main-nav.scss
+++ b/src/scss/components/_main-nav.scss
@@ -38,7 +38,7 @@
 
   @include media-breakpoint-up(lg) {
     display: flex;
-    padding: 0 15px;
+    padding: 0;
     margin: 0 60px;
     border-radius: 0;
     background-color: transparent;
