--- a/src/scss/components/_calculator.scss
+++ b/src/scss/components/_calculator.scss
@@ -13,6 +13,7 @@
 
   @include media-breakpoint-up(lg) {
     text-align: left;
+    margin-bottom: 100px;
   }
 }
 
@@ -34,9 +35,14 @@
     width: calc(50% - 10px);
     margin-right: 20px;
 
-
     &:nth-child(2n) {
       margin-right: 0;
+    }
+  }
+
+  @include media-breakpoint-up(lg) {
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0;
     }
   }
 
@@ -87,6 +93,10 @@
   li {
     position: relative;
     margin-bottom: 20px;
+
+    &:last-child {
+      margin: 0;
+    }
 
     &::before {
       content: "";
@@ -166,6 +176,10 @@
 
   @include media-breakpoint-up(md) {
     padding: 0;
+  }
+
+  @include media-breakpoint-up(lg) {
+    margin-bottom: 30px;
   }
 }
 
