--- a/src/scss/components/_promo-slider.scss
+++ b/src/scss/components/_promo-slider.scss
@@ -1,5 +1,5 @@
 .promo-slider {
-  margin-bottom: 150px;
+  margin-bottom: 145px;
 }
 
 .promo-slider__container {
@@ -7,11 +7,12 @@
 }
 
 .promo-slider__nav {
-  width: 100%;
+  // width: 100%;
   position: absolute;
   top: 50%;
-  left: 50%;
-  transform: translateX(-50%);
+  left: -10px;
+  right: -10px;
+  transform: translateY(-50%);
 }
 
 .promo-slider__wrapper {
@@ -40,6 +41,8 @@
 .promo-slider__text {
   width: 50%;
   padding: 0 20px;
+  padding-left: 10px;
+  padding-bottom: 30px;
 }
 
 .promo-slider__title {
@@ -68,4 +71,8 @@
     font-size: 16px;
     line-height: 27px;
   }
+}
+
+.promo-slider__dots {
+  position: absolute;
 }
