--- a/src/scss/components/_social.scss
+++ b/src/scss/components/_social.scss
@@ -11,7 +11,9 @@
     margin-right: 10px;
   }
 
-  @include color-transition;
+  svg {
+    transition: fill 0.2s ease;
+  }
 
   &:hover svg {
     fill: $blue;
