--- a/src/scss/components/_tariffs.scss
+++ b/src/scss/components/_tariffs.scss
@@ -3,6 +3,7 @@
 
   @include media-breakpoint-up(lg) {
     padding: 70px 0;
+    padding-bottom: 60px;
   }
 }
 
@@ -84,5 +85,29 @@
 
   &:last-of-type {
     margin-right: 0;
+  }
+}
+
+.tariffs__slider-nav {
+  position: absolute;
+  top: calc(50% - 10px);
+  transform: translateY(-50%);
+  left: 20px;
+  right: 20px;
+  z-index: 11;
+
+  @include media-breakpoint-up(xl) {
+    left: 0;
+    right: 0;
+  }
+
+  @include media-breakpoint-up(xl) {
+    left: -20px;
+    right: -20px;
+  }
+
+  @include media-breakpoint-up(xxl) {
+    left: -30px;
+    right: -30px;
   }
 }
