--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -42,6 +42,7 @@
 @import "components/user-nav";
 @import "components/button";
 @import "components/slider-nav";
+@import "components/nav-dots";
 @import "components/main-banner";
 @import "components/advantages";
 @import "components/recommendation";
