--- a/src/scss/components/_promo-slider.scss
+++ b/src/scss/components/_promo-slider.scss
@@ -1,48 +1,78 @@
 .promo-slider {
-  margin-bottom: 145px;
+  margin-bottom: 150px;
+}
+
+.promo-slider__main-wrapper {
+  position: relative;
 }
 
 .promo-slider__container {
   position: relative;
-}
 
-.promo-slider__nav {
-  // width: 100%;
-  position: absolute;
-  top: 50%;
-  left: -10px;
-  right: -10px;
-  transform: translateY(-50%);
+
+  @include media-breakpoint-up(lg) {
+    padding: 0 82px;
+  }
 }
 
 .promo-slider__wrapper {
   position: relative;
-  padding: 0 82px;
   z-index: 1;
 }
 
 .promo-slider__item {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  padding: 16px 10px;
+  justify-content: center;
+  height: auto;
+  padding: 14px 10px;
+  padding-bottom: 95px;
   background-color: $blue-light-1;
   border: 2px dashed #808181;
   border-radius: 40px;
+
+  @include media-breakpoint-up(md) {
+    flex-direction: row;
+    min-height: 497px;
+    padding: 14px 10px;
+  }
+}
+
+.no-js .promo-slider__item:not(:first-of-type) {
+  display: none;
 }
 
 .promo-slider__img {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50%;
+  height: 269px;
   flex-shrink: 0;
+  margin-bottom: 20px;
+
+  img {
+    max-height: 100%;
+  }
+
+  @include media-breakpoint-up(md) {
+    height: auto;
+    width: 50%;
+    margin-bottom: 0;
+  }
 }
 
 .promo-slider__text {
-  width: 50%;
-  padding: 0 20px;
-  padding-left: 10px;
+  padding: 0 10px;
   padding-bottom: 30px;
+
+  @include media-breakpoint-up(md) {
+    width: 50%;
+    padding: 117px 40px;
+    padding-left: 10px;
+    margin-top: 0;
+    margin-bottom: auto;
+  }
 }
 
 .promo-slider__title {
@@ -73,6 +103,48 @@
   }
 }
 
+
+.promo-slider__nav {
+  display: none;
+
+  @include media-breakpoint-up(md) {
+    display: block;
+    position: absolute;
+    height: 0;
+    top: calc(50% - 20px);
+    left: -15px;
+    right: -15px;
+    z-index: 1;
+
+    ul {
+      position: absolute;
+      width: 100%;
+      height: 0;
+    }
+  }
+
+  @include media-breakpoint-up(lg) {
+    top: calc(50% - 30px);
+    left: 0;
+    right: 0;
+  }
+
+  @include media-breakpoint-up(xxl) {
+    left: -30px;
+    right: -30px;
+  }
+}
+
 .promo-slider__dots {
   position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 40px;
+  z-index: 1;
+
+  @include media-breakpoint-up(md) {
+    left: calc(50% + 10px);
+    bottom: 108px;
+    transform: none;
+  }
 }
