--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -17,6 +17,7 @@
   border-radius: 20px;
   outline: none;
   transition: border-color 0.2s ease;
+  background-color: transparent;
 
   &::placeholder {
     color: rgba(#bfbfbf, 1);
