--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,6 +3,17 @@ $container-padding-x: 0.9375rem;
 
 $xxl-width: 1600px;
 
+$spacer: 1rem;
+$spacers: (
+  0: 0,
+  1: $spacer / 4,
+  2: $spacer / 2,
+  3: $spacer,
+  4: $spacer * 1.5,
+  5: $spacer * 3,
+  6: $spacer * 4,
+);
+
 // $grid-breakpoints: (
 //   xs: 0,
 //   sm: 576px,
