--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,6 +32,7 @@
 
 // Components
 
+@import "components/section";
 @import "components/section-xxl";
 @import "components/header";
 @import "components/footer";
