--- a/src/scss/typography/_heading-secondary.scss
+++ b/src/scss/typography/_heading-secondary.scss
@@ -6,6 +6,11 @@
   letter-spacing: 0;
   color: $black-1;
 
+  @include media-breakpoint-up(md) {
+    font-size: 25px;
+    line-height: 32px;
+  }
+
   @include media-breakpoint-up(lg) {
     font-size: 40px;
     line-height: 52px;
