--- a/src/scss/typography/_heading-tertiary.scss
+++ b/src/scss/typography/_heading-tertiary.scss
@@ -6,6 +6,11 @@
   letter-spacing: 0;
   color: $black-1;
 
+  @include media-breakpoint-up(md) {
+    font-size: 22px;
+    line-height: 28px;
+  }
+
   @include media-breakpoint-up(lg) {
     font-size: 30px;
     line-height: 39px;
