--- a/src/scss/components/_calculator.scss
+++ b/src/scss/components/_calculator.scss
@@ -171,6 +171,10 @@
   }
 }
 
+.calculator__features-qm {
+  transform: translateY(-2px);
+}
+
 .calculator__wrapper {
   position: relative;
   padding: 0 22px;
