--- a/src/scss/components/_tariffs.scss
+++ b/src/scss/components/_tariffs.scss
@@ -44,6 +44,7 @@
   line-height: 26px;
   font-weight: 700;
   color: $white;
+  letter-spacing: 0;
   background-color: $black;
   border-radius: 10px;
   margin: 0;
