--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -51,6 +51,7 @@
 @import "components/subscribe";
 @import "components/additional";
 @import "components/social";
+@import "components/question-mark";
 @import "components/form";
 @import "components/calculator";
 @import "components/tariffs";
