--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -5865,11 +5865,11 @@ a {
       font-size: 40px;
       line-height: 52px; } }
 
-@media (min-width: 992px) {
+@media (min-width: 1240px) {
   .review__wrapper-top {
     display: flex; } }
 
-@media (min-width: 768px) {
+@media (min-width: 1240px) {
   .review__info {
     width: 60%;
     padding-right: 20px;
@@ -5881,7 +5881,7 @@ a {
   margin-top: 35px;
   overflow: visible;
   z-index: 11; }
-  @media (min-width: 992px) {
+  @media (min-width: 1240px) {
     .review__gallery {
       flex-shrink: 0;
       width: 250px;
@@ -5893,12 +5893,12 @@ a {
 .review__gallery-wrapper {
   position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
   height: 100%; }
   .review__gallery-wrapper::before {
     content: "";
-    display: block;
+    display: none;
     width: 126px;
     height: 126px;
     position: absolute;
@@ -5906,8 +5906,9 @@ a {
     right: 0;
     border-radius: 20px;
     background-color: rgba(20, 103, 255, 0.28); }
-  @media (min-width: 992px) {
+  @media (min-width: 1240px) {
     .review__gallery-wrapper::before {
+      display: block;
       width: 170px;
       height: 170px;
       top: 50%;
@@ -5916,14 +5917,17 @@ a {
       z-index: -1; } }
 
 .review__gallery-slide {
-  display: block;
+  display: none;
   height: 100%;
   border-radius: 20px; }
-  @media (min-width: 992px) {
+  .review__gallery-slide:nth-child(-n + 2) {
+    display: block; }
+  @media (min-width: 1240px) {
     .review__gallery-slide {
+      display: block;
       width: 100%;
       object-fit: cover; } }
-  @media (min-width: 992px) {
+  @media (min-width: 1240px) {
     .review__gallery-slide:not(.review__gallery-slide--current) {
       width: 170px;
       height: 170px;
@@ -5962,7 +5966,7 @@ a {
   right: -22px;
   justify-content: space-between;
   z-index: 111; }
-  @media (min-width: 992px) {
+  @media (min-width: 1240px) {
     .review__gallery-nav {
       display: flex; } }
   .review__gallery-nav--hidden {
