--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,6 +21,7 @@
 // Typorgraphy
 
 @import "typography/colors";
+@import "typography/list";
 @import "typography/heading-primary";
 @import "typography/heading-secondary";
 @import "typography/heading-tertiary";
